<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="mainViewModel"
            type="com.example.quickcalculator.viewmodels.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.MainActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_appbar_text"
                android:textColor="#ffffff"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                style="@style/TextAppearance.MaterialComponents.Headline4"/>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintBottom_toTopOf="@id/button_layout_group">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/app_bar"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@={mainViewModel.valueOne}"
                    android:hint="@string/value_1_hint"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:text="@{mainViewModel.getOperand()}"
                android:textSize="30sp"
                tools:text="+"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/app_bar"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@={mainViewModel.valueTwo}"
                    android:hint="@string/value_2_hint"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:text="@string/equals_sign"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:text="@{mainViewModel.getResult()}"
                tools:text="100"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_layout_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/add_sub_button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/add_button_text"
                    android:textSize="20sp"
                    android:onClick="@{() -> mainViewModel.onPlusClicked()}"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/subtract_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/subtract_button_text"
                    android:textSize="20sp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/add_sub_button_layout">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/multiply_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/multiply_button_text"
                    android:textSize="20sp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/divide_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/divide_button_text"
                    android:textSize="20sp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/equals_button_text"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/button_layout_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>